クイズの内容変更

--- a/kencho.html
+++ b/kencho.html
@@ -48,8 +48,8 @@
             <div class="row my-3">
 
                 <div class="col-12">
-                    <h1 class="text-center main-title">県庁所在地クイズ</h1>
-                    <p class="text-center">都道府県の県庁所在地を3つの中から選んで回答しよう</p>
+                    <h1 class="text-center main-title">高齢者スマホ検定３級</h1>
+                    <p class="text-center">正しい操作方法を三つのうちから答えなさい</p>
                 </div>
 
             </div>
@@ -201,10 +201,10 @@
 //問題文のデータ
                 questions:{
                     0:{
-                        title: "神奈川県の県庁所在地はどこ？",
-                        hint: "赤レンガ倉庫がある街！",
+                        title: "長谷川君のチンチンはどんな形？",
+                        hint: "右利き",
                         answers: [
-                            "横浜市", "横須賀市", "町田市"
+                            "左曲がり", "右曲がり", "ギザギザ"
                         ],
                         answerNum: 0,
                         description: ""
