いじりました

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
  
     <nav class="navbar navbar-expand-lg navbar-dark bg-main-green">
         <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" width="30" height="30" class="d-inline-block align-top mr-2" alt="">
-            Quiz App
+            高齢者検定
         </a>
     </nav>
 
@@ -49,7 +48,7 @@
             <div class="row mt-5 mb-4">
 
                 <div class="col-12">
-                    <h1 class="text-center main-title">挑戦するクイズを選ぼう！</h1>
+                    <h1 class="text-center main-title">挑戦する級を選ぼう！</h1>
                 </div>
 
             </div>
@@ -60,8 +59,8 @@
                     <div class="card" style="">
                         <img src="images/quiz-list/kencho.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">県庁所在地クイズ</h5>
-                            <p class="card-text">社会科で勉強する都道府県の県庁所在地を回答するクイズです</p>
+                            <h5 class="card-title">3級</h5>
+                            <p class="card-text">スマホに関する初歩的な問題です</p>
                             <a href="kencho.html" class="btn btn-primary">チャレンジする</a>
                         </div>
                     </div>
@@ -71,9 +70,19 @@
                     <div class="card" style="">
                         <img src="images/quiz-list/sample-thumb.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">クイズタイトル</h5>
-                            <p class="card-text">クイズの説明が入ります</p>
+                            <h5 class="card-title">2級</h5>
+                            <p class="card-text">スマホに関する標準レベルの問題です</p>
                             <a href="app.html" class="btn btn-primary">チャレンジする</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-12 p-3">
+                    <div class="card" style="">
+                        <img src="images/quiz-list/sample-thumb.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">1級</h5>
+                            <p class="card-text">スマホに関する難易度の高い問題です</p>
+                            <a href="hard.html" class="btn btn-primary">チャレンジする</a>
                         </div>
                     </div>
                 </div>
