--- a/kencho.html
+++ b/kencho.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- fabicon (Webアイコン) の設定 -->
-    <link rel="apple-touch-icon" type="image/png" href="images/favicon/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" href="images/favicon/icon-192x192.png">
+    <link rel="apple-touch-icon" type="image/png" href="images/favicon/kouresya.png">
+    <link rel="icon" type="image/png" href="images/favicon/kouresya.png">
 
     <!-- OGP 設定 -->
     <meta property="og:title" content="Quiz App">
@@ -36,8 +36,7 @@
  
     <nav class="navbar navbar-expand-lg navbar-dark bg-main-green">
         <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" width="30" height="30" class="d-inline-block align-top mr-2" alt="">
-            Quiz App
+            高齢者検定
         </a>
     </nav>
 
