--- a/base.html
+++ b/base.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- fabicon (Webアイコン) の設定（いじらない） -->
-    <link rel="apple-touch-icon" type="image/png" href="images/favicon/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" href="images/favicon/icon-192x192.png">
+    <link rel="apple-touch-icon" type="image/png" href="images/favicon/kouresya.png">
+    <link rel="icon" type="image/png" href="images/favicon/kouresya.png">
 
     <!-- OGP 設定（いじらない） -->
     <meta property="og:title" content="Quiz App">
@@ -38,10 +38,10 @@
     <!-- ナビゲーションバー -->
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-main-green">
-        <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" width="30" height="30" class="d-inline-block align-top mr-2" alt="">
-            Quiz App
+        <a class="navbar-brand">
+            高齢者検定
         </a>
+        
     </nav>
 
     <div id="app">
@@ -53,10 +53,11 @@
             <div class="row my-3">
 
                 <div class="col-12">
-                    <h1 class="text-center main-title">クイズタイトル</h1>
-                    <p class="text-center">クイズの説明がはいります</p>
+                    <div class="text-center main-title">高齢者検定</h1>
                 </div>
-
+                <div class = botanclass>
+                <a href="index.html"><button class="botan" type="button">高齢者検定を始める</button>
+                </div>
             </div>
 
             <div class="row">
