--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                 <div class="col-md-3 col-12 p-3">
                     <div class="card" style="">
-                        <img src="images/quiz-list/kencho.png" class="card-img-top" alt="...">
+                        <img src="" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">3級</h5>
                             <p class="card-text">スマホに関する初歩的な問題です</p>
@@ -68,7 +68,7 @@
 
                 <div class="col-md-3 col-12 p-3">
                     <div class="card" style="">
-                        <img src="images/quiz-list/sample-thumb.png" class="card-img-top" alt="...">
+                        <img src="" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">2級</h5>
                             <p class="card-text">スマホに関する標準レベルの問題です</p>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-3 col-12 p-3">
                     <div class="card" style="">
-                        <img src="images/quiz-list/sample-thumb.png" class="card-img-top" alt="...">
+                        <img src="" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">1級</h5>
                             <p class="card-text">スマホに関する難易度の高い問題です</p>
