中級ランダムスタート

--- a/index.html
+++ b/index.html
@@ -56,28 +56,28 @@
             <div class="row">
 
                 <div class="col-md-3 col-12 p-3">
-                    <div class="card" style="">
+                    <div class="card">
                         <img src="" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">3級</h5>
                             <p class="card-text">スマホに関する初歩的な問題です</p>
-                            <a href="kencho.html" class="btn btn-primary">チャレンジする</a>
+                            <a href="app.html" class="btn btn-primary">チャレンジする</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-md-3 col-12 p-3">
-                    <div class="card" style="">
+                    <div class="card">
                         <img src="" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">2級</h5>
                             <p class="card-text">スマホに関する標準レベルの問題です</p>
-                            <a href="app.html" class="btn btn-primary">チャレンジする</a>
+                            <a href="middle.html" class="btn btn-primary">チャレンジする</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-12 p-3">
-                    <div class="card" style="">
+                    <div class="card">
                         <img src="" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">1級</h5>
