細かな表示修正

--- a/middle.html
+++ b/middle.html
@@ -167,7 +167,7 @@
 
                             <div class="col-8">
 
-                                <p>{{questionsLength}} 問中 {{ correctAnswerNum }}問正解しました！</p>
+                                <p>10問中 {{ correctAnswerNum }}問正解しました！</p>
 
                             </div>
 
