細かな表示修正

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="card">
                         <img src="" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">3級</h5>
+                            <h5 class="card-title">初級</h5>
                             <p class="card-text">スマホに関する初歩的な問題です</p>
                             <a href="app.html" class="btn btn-primary">チャレンジする</a>
                         </div>
@@ -70,7 +70,7 @@
                     <div class="card">
                         <img src="" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">2級</h5>
+                            <h5 class="card-title">中級</h5>
                             <p class="card-text">スマホに関する標準レベルの問題です</p>
                             <a href="middle.html" class="btn btn-primary">チャレンジする</a>
                         </div>
@@ -80,7 +80,7 @@
                     <div class="card">
                         <img src="" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">1級</h5>
+                            <h5 class="card-title">上級</h5>
                             <p class="card-text">スマホに関する難易度の高い問題です</p>
                             <a href="hard.html" class="btn btn-primary">チャレンジする</a>
                         </div>
