中級完成　微調整

--- a/middle.html
+++ b/middle.html
@@ -106,7 +106,7 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalCenterTitle">問題{{getCurrentQuestionNumber()}}</h5>
+                        <h5 class="modal-title" id="exampleModalCenterTitle">問題{{questionCount - 1}}</h5>
                     </div>
                     
                     <div class="modal-body">
