--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <div class="card-body">
                             <h5 class="card-title">初級</h5>
                             <p class="card-text">スマホに関する初歩的な問題です</p>
-                            <a href="app.html" class="btn btn-primary">チャレンジする</a>
+                            <a href="easy.html" class="btn btn-primary">チャレンジする</a>
                         </div>
                     </div>
                 </div>
