--- a/middle.html
+++ b/middle.html
@@ -47,7 +47,7 @@
             <div class="row my-3">
 
                 <div class="col-12">
-                    <h1 class="text-center main-title">高齢者スマホ検定３級</h1>
+                    <h1 class="text-center main-title">高齢者スマホ検定中級</h1>
                     <p class="text-center">正しい操作方法を三つのうちから答えなさい</p>
                 </div>
 
