--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="container">
 
-            <div class="row mt-5 mb-4">
+            <div class="row mt-5 mb-4 justify-content-center"></div>
 
                 <div class="col-12">
                     <h1 class="text-center main-title">挑戦する級を選ぼう！</h1>
@@ -53,7 +53,7 @@
 
             </div>
 
-            <div class="row">
+            <div class="row justify-content-center">
 
                 <div class="col-md-3 col-12 p-3">
                     <div class="card">
